🚀 Major Platform Improvements
✅ Security & Configuration:
- Removed hardcoded API keys and model names
- All credentials now use environment variables
- Added validate_env.py for configuration validation
- Updated .env.example with proper templates

🎨 UI/UX Enhancements:
- Improved Image Analysis page with larger result areas
- Enhanced SMILES input section with better readability
- Streamlined sidebar (removed Settings, Help, Contact)
- Added dedicated Chat page with AI assistant

🔧 Backend Improvements:
- All API endpoints use environment-based model selection
- Removed dummy models dependency (using real trained models)
- Enhanced error handling and validation
- Updated documentation with security best practices

📚 Documentation:
- Added comprehensive PRESENTATION_SUMMARY.md
- Updated READMEs with security setup instructions
- Environment configuration guidelines

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-# DrugTox-AI Environment Configuration
+# MedToXAi Environment Configuration Template  
 # Copy this file to .env and update with your actual credentials
 
 # Groq AI Configuration
