🧬 Add ChemBERT + Groq Integration for Enhanced Chemical Analysis
✨ Features Added:
- ChemBERT transformer model (768-dim embeddings)
- Groq AI integration for text generation
- Molecular similarity analysis
- Batch chemical processing
- Property prediction with AI reasoning

📦 New Files:
- backend/models/chembert_analyzer.py
- backend/models/chembert_groq_integration.py
- backend/demo_best_results.py
- backend/CHEMBERT_GROQ_GUIDE.md

🔧 Updates:
- requirements.txt: Added transformers, torch
- .env: Updated AI model to llama-3.3-70b-versatile

✅ All tests passing
✅ Production-ready integration

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,3 +9,7 @@ scikit-learn>=1.2.0
 groq>=0.4.0
 supabase>=2.0.0
 python-dotenv>=1.0.0
+
+# ChemBERT - Chemical Transformer Model
+transformers>=4.30.0
+torch>=2.0.0
