Add Render deployment configuration and mobile responsiveness
- Added Render Blueprint (render.yaml) for automatic deployment
- Configured Gunicorn production server for backend
- Enhanced mobile responsiveness across all pages
- Centralized API configuration for environment awareness
- Created comprehensive deployment documentation
- Added production build scripts and environment templates
- Updated dependencies for production deployment

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,3 +13,7 @@ python-dotenv>=1.0.0
 # ChemBERT - Chemical Transformer Model
 transformers>=4.30.0
 torch>=2.0.0
+
+# Production Server
+gunicorn>=21.2.0
+gevent>=23.9.1
