--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:prod": "NODE_ENV=production react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "serve": "serve -s build -l 3000"
   },
   "devDependencies": {
     "@types/react": "^18.2.24",
